<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signVideoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Example sign name"
        android:textSize="20sp"
        android:layout_gravity="center"
        tools:ignore="HardcodedText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip" />

    <VideoView
        android:id="@+id/signVideoView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signVideoName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/signVideoMnemonic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signVideoView"
        android:text="Example sign mnemonic"
        android:textSize="12sp"
        android:layout_gravity="center"
        tools:ignore="HardcodedText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip" />


    <ProgressBar
        android:id="@+id/signVideoLoadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        style="@android:style/Widget.ProgressBar.Large.Inverse"/>

</RelativeLayout>