<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signVideoFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signVideoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="6dip"
        android:layout_marginTop="6dip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <VideoView
        android:id="@+id/signVideoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/signVideoName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/signVideoMnemonic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signVideoView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="6dip"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/signVideoExceptionMessage"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signVideoMnemonic"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="6dip"
        android:maxLines="12"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/backToSignBrowserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/signVideoExceptionMessage"
        android:layout_centerHorizontal="true"
        android:ellipsize="marquee"
        android:text="@string/back_to_sign_browser"
        android:singleLine="true" />

    <ProgressBar
        android:id="@+id/signVideoLoadingProgressCircle"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />


</RelativeLayout>